# aging

./: ChangeLog.md  Makefile  README.md  pyproject.toml
.github/workflows/: style-and-lint.yaml
src/aging/: __init__.py  __main__.py  aging.py
src/aging/commands/: __init__.py  guide_navigation.py  main.py
src/aging/data/: __init__.py  config.py  guides.py  search_hits.py
src/aging/messages/: __init__.py  main.py
src/aging/providers/: __init__.py  main.py
src/aging/screens/: about.py  main.py  search.py  see_also.py
src/aging/widgets/: __init__.py  entry_viewer.py  guide_directory.py  guide_menu.py
src/aging/widgets/entry_viewer/: entry_content.py  see_also.py  widget.py
