[project]
name = "aging"
version = "0.0.1"
description = "Coming at some point in the future"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "textual>=2.1.2",
    "textual-enhanced>=0.7.1",
    "ngdb>=0.8.0",
    "typing-extensions>=4.12.2",
    "xdg-base-dirs>=6.0.2",
    "textual-fspicker>=0.4.1",
    "pyperclip>=1.9.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
aging = "aging.__main__:main"

[build-system]
# https://github.com/astral-sh/rye/issues/1446
requires = ["hatchling==1.26.3", "hatch-vcs"]
# requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "textual-dev>=1.7.0",
    "pytest>=8.3.4",
    "pre-commit>=4.1.0",
    "mypy>=1.15.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aging"]
